--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 	
 		<div id="home">
 			<h1>pac-man</h1>
+			<h2>Thomas Marko</h2>
 			<h3>Lucio PANEPINTO<br><em>2015</em></h3>
 			<canvas id="canvas-home-title-pacman"></canvas>
 			<div id="presentation">
